--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,11 @@
     <string name="logo">TODO</string>
     <string name="image_string">image_string</string>
     <string name="gallery">Gallery</string>
+    <string name="aplly">APPLICATION FORM</string>
+    <string name="personal">1. Personal Information</string>
+    <string name="edu">2. Educational Details:</string>
+    <string name="fin">3. Financial Information:</string>
+    <string name="sch">Details of any Scholarships or Grants received:</string>
+    <string name="re">4. Briefly explain why you require financial assistance and how it will benefit your educational journey:</string>
 
 </resources>
