--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,17 +19,16 @@
     <string name="CONTACT">CONTACT US</string>
     <string name="Profile">PROFILE</string>
     <string name="WELCOME">WELCOME TO</string>
-    <string name="content">Shuruat is a revolutionary mobile app designed to support financially challenged students on their educational journey. Our app is dedicated to collecting important data from students in need of financial aid and connecting them to the appropriate resources and support they require.  Powered by the esteemed Maharaja Agrasen Institute of Technology, Shuruat aims to streamline the process of connecting financially assistance students with potential sources of aid .With Shuruat, you can be part of a transformative movement that reshapes the future of education.</string>
-    <string name="content2">\"Unlocking Education\'s Potential: Shuruat, the app for financially challenged students.</string>
-    <string name="powered">Powered by Maharaja Agrasen Institute of Technology</string>
+    <string name="content">Shuruat is an app designed to help the nearly 500 million+ rural women and 20 million small and unorganized businesses across the country get access to financial assistance through NBFCs, providing financial literacy especially in the areas of starting small businesses, retail investing. The app also comes with the added features of helping users navigate and create awareness about government schemes and policies. This app has been created and is being managed by IgniteIndia led by two teenagers- Vivaan Garg and Avaya Aggarwal</string>
+    <string name="content2">\“Unleashing the vast human capital of India by providing financial assistance, literacy and access to government schemes to rural women and small businesses\”</string>
+    <string name="powered">Powered by Ignite India</string>
     <string name="submit">LOGIN</string>
     <string name="forget">FORGET PASSWARD?</string>
     <string name="New_Registration">New Registration</string>
     <string name="Submit">SUBMIT</string>
     <string name="finacal">Briefly explain why you require financial assistance</string>
-    <string name="QUATE">\"Education is the most powerful weapon which you can use to change the world.\" -
-
-        Nelson Mandela</string>
+    <string name="QUATE">\“Economic growth without the growth of the poorest of the poor isn’t not growth at all \” - Amartya Sen
+</string>
     <string name="contactmait">  Maharaja Agrasen Institute of  Technology</string>
     <string name="postal">Maharaja Agrasen Institute of Technology  PSP Area, Plot No. 1, Sector-22, Rohini,  Delhi-110086  INDIA.</string>
     <string name="phone"> PHONE:-</string>
@@ -43,7 +42,7 @@
     <string name="VISON">OUR VISION</string>
     <string name="mission_content">At Shuruat, our mission is to empower financially challenged students by providing them with the necessary tools, resources, and support to overcome financial barriers and pursue their educational dreams. We are dedicated to streamlining the process of connecting students to financial assistance, creating a comprehensive database that enables organizations and institutions to enhance access to education. Through collaboration and advocacy, we aim to create a more equitable educational landscape where every student has the opportunity to thrive. Our mission is to be a catalyst for change, breaking down barriers and transforming lives through the power of education.</string>
     <string name="vision.">OUR VISION</string>
-    <string name="vision_content">At SHURUAT, we believe in the transformative power of education and are committed to empowering financially challenged students to fulfill their educational dreams. We understand that financial barriers can often hinder students from accessing quality education and achieving their full potential. That why we are on a mission to break down those barriers and create a more equitable educational landscape. Our approach is multi-faceted, encompassing various strategies to provide comprehensive support to students in need. One of our key initiatives is streamlining the process of connecting students to financial assistance. We understand that navigating the complex world of scholarships, grants, and loans can be overwhelming, especially for students who may not have access to adequate guidance. Therefore, we have created a user-friendly database that brings together all the relevant resources and tools in one place. This database serves as a valuable hub for both students and organizations, facilitating efficient access to financial aid options.</string>
+    <string name="vision_content">Our vision is to democratize access to finance and financial literacy across India. The female labor force participation rate for India is less than 25% for the year 2023. One of our core beliefs is that India will only transition from a developing to a developed economy by achieving total and complete gender equity; therefore this app has a special emphasis on increasing access to finance for rural women and making them self-reliant by fostering entrepreneurship </string>
     <string name="login_regis">REGISTERED USER</string>
     <string name="Extra">TODO</string>
     <string name="logo">TODO</string>
@@ -55,5 +54,8 @@
     <string name="fin">3. Financial Information:</string>
     <string name="sch">Details of any Scholarships or Grants received:</string>
     <string name="re">4. Briefly explain why you require financial assistance and how it will benefit your educational journey:</string>
+    <string name="otp">We will send you an One Time Password on this mobile number</string>
+    <string name="otp_1">Enter The OTP sent to Entered Number</string>
+    <string name="appl">Continued to Application Form........</string>
 
 </resources>
